# public_api_test

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
docs/: conf.py
src/opt_out/: manage.py
src/opt_out/public_api/: settings.py  skeleton.py
src/opt_out/public_api/api/: admin.py  apps.py  models.py  views.py
src/opt_out/public_api/website/: settings.py  urls.py
tests/: conftest.py  test_skeleton.py
tests/public_api/api/: test_models.py  test_views.py
