[tool.poetry]
name = "opt_out.public_api"
version = "0.1.0"
description = "Public API for opt-out website, browser extensions and 3rd party tools"
authors = ["Bojan Miletic <boyan.miletic@gmail.com>"]
readme = "README.md"

packages = [
    { include = "opt_out", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
pre-commit = "^1.17"
black = { version = "*", allows-prereleases = true }
flake8 = "*"
flake8-bugbear = "*"
pylint = "^2.3"
pycodestyle = "^2.5"
mypy = "^0.720.0"

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''